--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.codesgood:justifiedtextview:1.1.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 }
