--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/pin"
+        android:icon="@drawable/pin2"
         android:label="MapIT"
         android:roundIcon="@drawable/pin2"
         android:supportsRtl="true"
