--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,13 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/pin2"
-        android:label="MapIT"
+        android:label="T.I.Places"
         android:roundIcon="@drawable/pin2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".AboutApp"></activity>
-        <activity android:name=".AboutUs" />
+        <activity android:name=".manual"/>
+        <activity android:name=".AboutUs"/>
         <activity android:name=".MainActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
